--- a/index.html
+++ b/index.html
@@ -87,15 +87,15 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
               <div class="item active">
-                <img src="img/dish/dish2.jpg" alt="Los Angeles" style="width:100%;">
+                <img src="img/home.jpg"  style="width:100%;">
               </div>
 
               <div class="item">
-                <img src="img/home.jpg" alt="Chicago" style="width:100%;">
+                <img src="img//dish/dahi.jpg"  style="width:100%;">
               </div>
             
               <div class="item">
-                <img src="img/dish/dish3.jpg" alt="New york" style="width:100%;">
+                <img src="img/dish/smoothie.jpeg"  style="width:100%;">
               </div>
             </div>
 
