--- a/pages/food.html
+++ b/pages/food.html
@@ -112,7 +112,7 @@
                     <table class="table table-responsive borderless" style="color: black;background: transparent;font-size: large;">
                         <tbody style="width: auto;">
                             <tr style="border: none;width: auto;">
-                                <td style="border: none;float: left;width: auto;"><h4><B><?php $_GET['price']; ?></B></h4></td>
+                                <td style="border: none;float: left;width: auto;"><h4><B>Rs.1700</B></h4></td>
                                 <td style="border: none;float: right;width: auto;"><h4>Discount 10%</h4></td>
                             </tr>
                             <tr style="border: none;">
