shopping cart and checkout pages

--- a/pages/food.html
+++ b/pages/food.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="../css/flexslider.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/pricing.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <!-- google font -->
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Quicksand:300,400,700'>
@@ -130,7 +131,7 @@
                     <h1 style="color:black"><b>Classic Pizza</b></h1>
                     
                     <div class="table-responsive" style="width: auto;">
-                    <table class="table table-responsive borderless" style="color: black;background: transparent;font-size: large;">
+                    <table class="table borderless" style="color: black;background: transparent;font-size: large;">
                         <tbody style="width: auto;">
                             <tr style="border: none;width: auto;">
                                 <td style="border: none;float: left;width: auto;"><h4><B>Rs 1700</B></h4></td>
@@ -346,5 +347,7 @@
     <script type="text/javascript" src="../js/jquery.hoverdir.js"></script>
     <script type="text/javascript" src="../js/jQuery.scrollSpeed.js"></script>
     <script src="../js/main.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
