shopping cart and checkout pages

--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -89,10 +89,10 @@
                         <tbody style="width: auto;">
                             
                             <tr style="border: none;">
-                                <td style="border: none;font-size: xx-large;"><input type="radio" value="Card" />Card</td>
+                                <td style="border: none;font-size: xx-large;"><input type="radio" value="Card" name="payment" />Card</td>
                             </tr>
                             <tr style="border: none;">
-                                <td style="border: none;font-size: xx-large;"><input type="radio" value="Cash" />Cash</td>
+                                <td style="border: none;font-size: xx-large;"><input type="radio" value="Cash" name="payment" />Cash</td>
                             </tr>
                             
                             <tr style="border: none;">
