--- a/pages/contact.html
+++ b/pages/contact.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="../css/contact.css">
 
     <!-- google font -->
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Quicksand:300,400,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Quicksand:300,400,700'>
     
     <!-- js -->
     <script src="../js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
@@ -146,24 +146,6 @@
                         <a href="#" class="fa fa-linkedin-square tooltipped" title=""></a>
                     </div>
                 </div>
-                <!-- <div class="section">
-                    <div class="w3_agileits-subscribe timings text-center">
-                        <div class="time">
-                            <div>
-                                <h5><i class="fa fa-map-marker" aria-hidden="true"></i>  </h5>
-                                <p>No 5, Queens Road, Colombo-03</p>
-                            </div>
-                            <div>
-                                <h5><i class="fa fa-phone" aria-hidden="true"></i>  </h5>
-                                <p>011-5448956</p>
-                            </div>
-                            <div>
-                                <h5><i class="fa fa-envelope" aria-hidden="true"></i>  </h5>
-                                <p>info@foodicious.com</p>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
             </div>
         </div>
         <!-- /.container -->
