--- a/pages/shoppingcart.html
+++ b/pages/shoppingcart.html
@@ -21,10 +21,10 @@
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/shoppingcart.css">
     <link rel="stylesheet" href="../css/pricing.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
 
     <!-- google font -->
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Quicksand:300,400,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Quicksand:300,400,700'>
     
     <!-- js -->
     <script src="../js/jquery-2.1.3.min.js"></script>
@@ -178,7 +178,7 @@
                       </tbody>
                     </table>
                   </div>
-                  <button class="btn btn-warning btn-lg" >Continue Shopping</button>
+                  <button class="btn-lg discoverAll" >Continue Shopping</button>
                   <button class="btn btn-lg" style="float: right;background: yellow">Clear Cart</button>  <br> <br>
                 </div>
                 </div>
@@ -197,7 +197,7 @@
                         <h3 style="text-align: left">Total</h3>
                         <label >Rs 3700</label> 
                         <hr>
-                        <button class="btn btn-success btn-lg" >Proceed To Checkout</button>
+                        <button class="btn-lg discoverAll" >Proceed To Checkout</button>
                       </div>
                     </div>
                 </div>
