logo name changed

--- a/pages/food.html
+++ b/pages/food.html
@@ -46,7 +46,7 @@
 
             <ul class="nav navbar-nav navbar-header">
                 <li><div class="hidden-xs" id="logo"><a href="./index.php">
-                <img src="../img/16.png" alt="">
+                <img src="../img/logo.png" alt="">
             </a></div></li>
                 <li><a href="#">Menu</a></li>
                 <li><a href="../index.php#special-offer">Special Offers</a></li>
