--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -16,28 +16,18 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="../css/font-awesome.min.css">
-    <link rel="stylesheet" href="../css/animate.css">
-    <link rel="stylesheet" href="../css/flexslider.css">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/checkout.css">
-    <link rel="stylesheet" href="../css/pricing.css">
+
 
     <!-- google font -->
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Quicksand:300,400,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Quicksand:300,400,700'>
     
     <!-- js -->
     <!-- <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script> -->
 
     <script src="../js/jquery-2.1.3.min.js"></script>
-    <script type="text/javascript" src="../js/jquery.flexslider.min.js"></script>
-    <script type="text/javascript">
-            $(window).load(function() {
-                $('.flexslider').flexslider({
-                 animation: "slide",
-                 controlsContainer: ".flexslider-container"
-                });
-            });
-    </script>
+    
 </head>
 <body data-spy="scroll" data-target="#navbar" data-offset="120" >
     <!--[if lt IE 7]>
@@ -60,7 +50,7 @@
 
             <ul class="nav navbar-nav navbar-header">
                 <li><div class="hidden-xs" id="logo"><a href="#header">
-                <img src="../img/16.png" alt="">
+                <img src="../img/logo.png" alt="">
             </a></div></li>
                 <li><a href="#reservation">Menu</a></li>
                 <li><a class="scroll" href="index.html/#special-offer">Special Offers</a></li>
