--- a/pages/shoppingcart.html
+++ b/pages/shoppingcart.html
@@ -51,7 +51,7 @@
 
             <ul class="nav navbar-nav navbar-header">
                 <li><div class="hidden-xs" id="logo"><a href="#header">
-                <img src="../img/16.png" alt="">
+                <img src="../img/logo.png" alt="">
             </a></div></li>
                 <li><a href="#reservation">Menu</a></li>
                 <li><a class="scroll" href="index.html/#special-offer">Special Offers</a></li>
