--- a/pages/howto.html
+++ b/pages/howto.html
@@ -128,7 +128,7 @@
                         </div>
                       </a>
                     </div>
-                    <nav aria-label="...">
+                    <!--<nav aria-label="...">
                       <ul class="pagination pagination-lg">
                         <li class="page-item disabled">
                           <a class="page-link" href="#" tabindex="-1">Previous</a>
@@ -140,7 +140,7 @@
                           <a class="page-link" href="#">Next</a>
                         </li>
                       </ul>
-                    </nav>
+                    </nav>-->
                 </div>
             </div>            
         </div> 
