--- a/pages/howto.html
+++ b/pages/howto.html
@@ -22,7 +22,6 @@
     <link rel="stylesheet" href="../css/pricing.css">
     <link rel="stylesheet" href="../css/food.css">
     <link rel="stylesheet" href="../css/howto.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <!-- google font -->
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Quicksand:300,400,700'>
@@ -61,16 +60,16 @@
             
 
             <ul class="nav navbar-nav navbar-header">
-                <li><div class="hidden-xs" id="logo"><a href="#header">
-                <img src="../img/16.png" alt="">
+                <li><div class="hidden-xs" id="logo"><a href="./index.php">
+                <img src="../img/logo.png" alt="">
             </a></div></li>
-                <li><a href="#reservation">Menu</a></li>
-                <li><a class="scroll" href="index.html/#special-offer">Special Offers</a></li>
-                <li><a href="#chefs">Our Chefs</a></li>                
-                <li><a href="#facts">Reviews</a></li>
-                <li><a href="#food-menu">How To</a></li>
-                <li><a href="#special-offser">Contact</a></li>
-                <li><a href="#"><img class="shoppingCart" alt="User" src="../img/cart1.png"></a></li>
+                <li><a href="menu.php">Menu</a></li>
+                <li><a class="scroll" href="../index.php#special-offer">Special Offers</a></li>
+                <li><a class="scroll" href="../index.php#chefs">Our Chefs</a></li>                
+                <li><a href="review.html">Reviews</a></li>
+                <li><a href="howto.html">How To</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="shoppingcart.html"><img class="shoppingCart" alt="User" src="../img/cart1.png"></a></li>
                 
                 <!--fix for scroll spy active menu element-->
                 <li style="display:none;"><a href="#header"></a></li>
@@ -115,7 +114,7 @@
                         </div>
                       </a>
                     </div>
-                    <div class="list-group" id="listgroup1">
+                    <!--<div class="list-group" id="listgroup1">
                       <a href="#" class="list-group-item ">
                         <div class="col-xs-4 item-photo">
                             <img id="image2" src="../img/restore.jpg"/>
@@ -127,7 +126,7 @@
                             <label> </label>
                         </div>
                       </a>
-                    </div>
+                    </div>-->
                     <!--<nav aria-label="...">
                       <ul class="pagination pagination-lg">
                         <li class="page-item disabled">
