--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -53,12 +53,12 @@
                 <img src="../img/logo.png" alt="">
             </a></div></li>
                 <li><a href="#reservation">Menu</a></li>
-                <li><a class="scroll" href="index.html/#special-offer">Special Offers</a></li>
-                <li><a href="#chefs">Our Chefs</a></li>                
-                <li><a href="#facts">Reviews</a></li>
-                <li><a href="#food-menu">How To</a></li>
-                <li><a href="#special-offser">Contact</a></li>
-                <li><a href="#"><img class="shoppingCart" alt="User" src="../img/cart1.png"></a></li>
+                <li><a class="scroll" href="../index.php#special-offer">Special Offers</a></li>
+                <li><a class="scroll" href="../index.php#chefs">Our Chefs</a></li>                
+                <li><a href="review.html">Reviews</a></li>
+                <li><a href="howto.html">How To</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="shoppingcart.html"><img class="shoppingCart" alt="User" src="../img/cart1.png"></a></li>
                 
                 <!--fix for scroll spy active menu element-->
                 <li style="display:none;"><a href="#header"></a></li>
