--- a/pages/howto.html
+++ b/pages/howto.html
@@ -109,7 +109,7 @@
                         <div id="hbbutton1">                        
                             <h2 class="list-group-item-heading" id="row1h">How to Place an Order?</h2> <br> <br> <br>
                             <p class="list-group-item-text" id="row1p1">Click on menu tab then on the desired food item ...</p><br>
-                            <button class="btn btn-primary btn-lg" >Read More</button><br>
+                            <button class="btn btn-primary btn-lg" onclick="location.href='howtodetail.html'">Read More</button><br>
                             <label> </label>
                         </div>
                       </a>
