shopping page js

--- a/pages/food.html
+++ b/pages/food.html
@@ -189,7 +189,7 @@
                     <table class="table borderless" id="foodtable">
                         <tbody id="foodtbody">
                             <tr id="row1">
-                                <td id="row1data1"><h4><B id="p">Rs 1700</B></h4></td>
+                                <td id="row1data1"><h4><B>Rs 1700</B></h4></td>
                                 <!-- <td id="row1data2"><h4>Discount 10%</h4></td> -->
 
                             </tr>
@@ -197,7 +197,7 @@
                                 <td id="row2data1"><h3><B>Quantity</B></h3></td>
                             </tr>
                             <tr class="rows">
-                                <td id="row3data1"><input type="number" placeholder="Enter Quantity" class="form-control" /></td>
+                                <td id="row3data1"><input type="number" id="quantity" placeholder="Enter Quantity" class="form-control" /></td>
                                 <!--<td id="row3data2"><button class="btn btn-primary btn-lg">Check Availability</button></td> -->
                             </tr>
                             <tr class="rows">
