--- a/pages/shoppingcart.html
+++ b/pages/shoppingcart.html
@@ -178,7 +178,7 @@
                       </tbody>
                     </table>
                   </div>
-                  <button class="btn-lg discoverAll" >Continue Shopping</button>
+                  <button class="btn-lg discoverAll" onclick="location.href='menu.php'">Continue Shopping</button>
                   <button class="btn btn-lg" style="float: right;background: yellow">Clear Cart</button>  <br> <br>
                 </div>
                 </div>
@@ -197,7 +197,7 @@
                         <h3 style="text-align: left">Total</h3>
                         <label >Rs 3700</label> 
                         <hr>
-                        <button class="btn-lg discoverAll" >Proceed To Checkout</button>
+                        <button class="btn-lg discoverAll" onclick="location.href='checkout.html'" >Proceed To Checkout</button>
                       </div>
                     </div>
                 </div>
