--- a/pages/food.html
+++ b/pages/food.html
@@ -50,7 +50,7 @@
 
             <ul class="nav navbar-nav navbar-header">
                 <li><div class="hidden-xs" id="logo"><a href="./index.php">
-                <img src="../img/logo.png" alt="">
+                <img src="../img/logo.png" onclick="location.href='../index.php';" alt="">
             </a></div></li>
                 <li><a href="menu.php">Menu</a></li>
                 <li><a class="scroll" href="../index.php#special-offer">Special Offers</a></li>
@@ -208,10 +208,10 @@
                                 <td id="row5data1"></td>
                                 <td id="row5data2"><input type="checkbox" value="DevilledFish" class="form-check-input"/>Devilled Fish</td>
                             </tr>
-<!--                             <tr class="rows">
+                            <tr class="rows">
                                 <td id="row6data1"></td>
                                 <td id="row6data2"><input type="checkbox" value="Cheese" form-check-input/>Cheese</td>
-                            </tr> -->
+                            </tr>
                             <tr class="rows">
                                 <td id="row7data1"></td>
                                 <td id="row7data2"><input type="checkbox" value="DevilledChicken" form-check-input/>Devilled Chicken</td>
