--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -50,7 +50,7 @@
 
             <ul class="nav navbar-nav navbar-header">
                 <li><div class="hidden-xs" id="logo"><a href="#header">
-                <img src="../img/logo.png" alt="">
+                <img src="../img/logo.png" onclick="location.href='../index.php';" alt="">
             </a></div></li>
                 <li><a href="#reservation">Menu</a></li>
                 <li><a class="scroll" href="../index.php#special-offer">Special Offers</a></li>
