--- a/pages/shoppingcart.html
+++ b/pages/shoppingcart.html
@@ -51,7 +51,7 @@
 
             <ul class="nav navbar-nav navbar-header">
                 <li><div class="hidden-xs" id="logo"><a href="#header">
-                <img src="../img/logo.png" alt="">
+                <img src="../img/logo.png" onclick="location.href='../index.php';" alt="">
             </a></div></li>
                 <li><a href="menu.php">Menu</a></li>
                 <li><a class="scroll" href="../index.php#special-offer">Special Offers</a></li>
