--- a/pages/food.html
+++ b/pages/food.html
@@ -200,7 +200,7 @@
                                 <td id="row3data1"><input type="number" id="quantity" placeholder="Enter Quantity" class="form-control" /></td>
                                 <!--<td id="row3data2"><button class="btn btn-primary btn-lg">Check Availability</button></td> -->
                             </tr>
-                            <tr class="rows">
+                            <!-- <tr class="rows">
                                 <td id="row4data1"><h3><B>Toppings</B></h3></td>
                                 
                             </tr>
@@ -219,7 +219,7 @@
                             <tr class="rows">
                                 <td id="row8data1"></td>
                                 <td id="row8data2"><input type="checkbox" value="Sausage" form-check-input/>Sausage</td>
-                            </tr>    
+                            </tr>    --> 
                             <tr class="rows">
                                 <td id="row9data1"><h3><b>Size<b></h3></b></td>
                             </tr>
