--- a/pages/shoppingcart.html
+++ b/pages/shoppingcart.html
@@ -175,7 +175,7 @@
                     </table>
                   </div>
 
-                  <button class="btn-lg discoverAll" onclick="location.href='menu.php'">Continue Shopping</button>
+                  <!-- <button class="btn-lg discoverAll" onclick="location.href='menu.php'">Continue Shopping</button> -->
 
                   <button class="btn btn-lg" style="float: right;background: yellow">Clear Cart</button>  <br> <br>
                 </div>
