--- a/pages/shoppingcart.html
+++ b/pages/shoppingcart.html
@@ -151,8 +151,8 @@
                           
                         </tr>
                         <tr>
-                            <td style="text-align: left">Saganaki Prawns</td>
-                            <td style="text-align: left">Rs.800</td>
+                            <td style="text-align: left">Butter Chicken</td>
+                            <td style="text-align: left">Rs.550</td>
                             <td ><div class="input-group spinner ">
                                 <input type="number" class="form-control" value="1">
                             </td>
