thai garlic prawns

--- a/pages/shoppingcart.html
+++ b/pages/shoppingcart.html
@@ -150,16 +150,16 @@
                             <td ><button class="btn btn-danger btn-lg" style="float: left">Delete</button></td>
                           
                         </tr>
-                        <!-- <tr>
-                            <td style="text-align: left">Vegetable Pasta</td>
-                            <td style="text-align: left">Rs.650</td>
+                        <tr>
+                            <td style="text-align: left">Thai Garlic Prawns</td>
+                            <td style="text-align: left">Rs.750</td>
                             <td ><div class="input-group spinner ">
                                 <input type="number" class="form-control" value="1">
                             </td>
                             <td ><button class="btn btn-primary btn-lg" onclick="calculatePrice()" style="float: left">Update</button></td> 
                             <td ><button class="btn btn-danger btn-lg" style="float: left">Delete</button></td>
                            
-                        </tr> -->
+                        </tr>
                         <!-- <tr>
                             <td style="text-align: left">Ice Cream</td>
                             <td style="text-align: left">Rs 250</td>
