--- a/pages/howto.html
+++ b/pages/howto.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="../css/howto.css">
 
     <!-- google font -->
-    <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Quicksand:300,400,700'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Quicksand:300,400,700'>
     
     <!-- js -->
     <!-- <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script> -->
